--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -8,6 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Kaiji</h1>
+    <section class="preview">
+
+    </section>
 </body>
 </html>
