Ajout des boutons ajout de l'eventlistener modification des fonctions

--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -9,8 +9,5 @@
 </head>
 <body>
     <h1>Kaiji</h1>
-    <section class="preview">
-
-    </section>
-</body>
+<button id="pierre">Pierre</button><button id="feuille">Feuille</button><button id="ciseaux">ciseaux</button>
 </html>
