--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,11 @@
     <title>Document</title>
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <h1>Kaiji</h1>
-<button id="pierre">Pierre</button><button id="feuille">Feuille</button><button id="ciseaux">ciseaux</button>
+    <button id="pierre">Pierre</button>
+    <button id="feuille">Feuille</button>
+    <button id="ciseaux">ciseaux</button>
+    <div id="div"></div>
 </html>
